# account_service/controllers/account_info.py
@@ -1,0 +1,9 @@
+
+def get_player_info():
+    pass
+
+def get_account_ids():
+    pass
+
+def verify_accounts():
+    pass
